initial changes for the vulcan-copro EDA changes